# thermaltrue-wms

./: .dockerignore  .env.example  .env.production  .gitignore  .mcp.json  .tauri-key  .tauri-key.pub  Cargo.toml  Dockerfile  GUIDE_INSTALASI.md  LICENSE  PRD.md  deploy_server.ps1  docker-compose.yml  index.html  install_server.bat  nginx.conf  oxlintrc.json  package-lock.json  package.json  query  reset_admin_password.txt  set_admin_pass.sql  stderr_new.txt  vite.config.ts  vite.config.ts.bak
.github/workflows/: release.yml  test-tauri-mcp.yml
backend/: Cargo.toml
backend/examples/: gen_hash.rs
backend/migrations/: 0001_initial_schema.sql  0002_seed_data.sql  0003_indexes.sql  0004_add_reversed_status.sql  0005_add_destination_and_updated_at.sql  0006_label_templates.sql  0007_add_label_template_designs.sql  0008_add_two_side_label_template.sql  0009_user_warehouses.sql
backend/src/: db_pool.rs  error.rs  jwt.rs  lib.rs  models.rs  validate.rs
backend/src/commands/: advanced.rs  analysis.rs  auth.rs  label_templates.rs  materials.rs  mod.rs  reports.rs  settings.rs  transactions.rs  warehouse.rs
backend/src/server/: mod.rs
backend/src/server/handlers/: advanced.rs  auth.rs  categories.rs  dashboard.rs  label_templates.rs  materials.rs  mod.rs  racks.rs  reports.rs  settings_handler.rs  stock_opname.rs  suppliers.rs  transactions.rs  transfers.rs  units.rs  users.rs  warehouses.rs
backend/src/tests/: mod.rs  validate_tests.rs
docs/: guide-instalasi-desktop.md  guide-instalasi-server.md
public/: manifest.json
scripts/: generate-keys.ps1  generate-selfsigned-cert.ps1  generate-update-json.ps1  test-auto-update.ps1  test-e2e-update.ps1  test-rollback.ps1
scripts/cap-templates/: dev.json  prod.json
scripts/update-server/: package-lock.json  package.json  server.js
server/: Cargo.toml  README.md  install-service.ps1
server/src/: main.rs
src/: App.tsx  index.css  index.css.bak  main.tsx  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  network_test.rs
src/__tests__/: DataState.test.tsx  ErrorBoundary.test.tsx  LoginPage.test.tsx  utils.test.ts
src/api/: index.ts  invoke-adapter.ts  lan-detector.ts
src/components/: BarcodeScanner.tsx  CommandPalette.tsx  DashboardAlertCard.tsx  DataTable.tsx  ErrorBoundary.tsx  MaterialTable.tsx  QRScanner.tsx  Toaster.tsx  TransactionForm.tsx  index.ts
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  data-state.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  toast.tsx
src/contexts/: AuthContext.tsx  OfflineContext.tsx  ThemeContext.tsx
src/dataProvider/: resources.ts
src/hooks/: use-toast.ts  useNetworkTest.ts  useUpdateLogger.ts
src/layouts/: DashboardLayout.tsx
src/lib/: offline.ts  tauri.ts  utils.ts
src/pages/: LoginPage.tsx  MasterDataPage.tsx
src/pages/analysis/: AbcAnalysisPage.tsx  AnalysisDashboardPage.tsx  (+4 more)
tests/: README.md  package-lock.json  package.json  runner.ts  tsconfig.json
tests/e2e/: analysis.test.ts  dashboard.test.ts  master-data.test.ts  negative.test.ts  reports.test.ts  settings.test.ts  transactions.test.ts  warehouse.test.ts
tests/fixtures/: data.ts
tests/helpers/: tauri-helper.ts
(+30 files in other folders)
