[package]
name = "backend"
version = "0.1.0"
description = "Thermaltrue WMS - Backend library"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
printpdf = "0.7"
uuid = { version = "1", features = ["v4"] }
csv = "1.3"
rust_xlsxwriter = "0.80"
calamine = "0.26"
zip = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "derive", "migrate"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
log = "0.4"

# Axum HTTP server (optional, for API server mode)
axum = { version = "0.7", optional = true }
jsonwebtoken = { version = "9", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
tower = { version = "0.4", optional = true }

# Tauri (optional, for desktop app mode)
tauri = { version = "2", features = [], optional = true }

[features]
default = []
server = ["axum", "jsonwebtoken", "tower-http", "tower"]
tauri = ["dep:tauri"]
