[package]
name = "server"
version = "0.1.0"
description = "Thermaltrue WMS - REST API Server"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
backend = { path = "../backend", features = ["server"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
windows-service = "0.7"
log = "0.4"
log-panics = "2"
env_logger = "0.11"
rand = "0.8"
hex = "0.4"
