[package]
name = "app"
version = "0.1.0"
description = "Thermaltrue WMS - Tauri Desktop App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
backend = { path = "../backend" }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-barcode-scanner = "2"
serde_json = "1"
tauri-plugin-updater = "2"
dotenvy = "0.15"
tokio = { version = "1", features = ["time"] }
