[package]
name = "app"
version = "1.0.0"
description = "Thermaltrue WMS - Tauri Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
backend = { path = "../backend", features = ["tauri"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-barcode-scanner = "2"
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["time", "io-util", "net"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
